artifacts/init-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-reader
