artifacts/kubeconfig-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-operator
