artifacts/kubeconfig-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ksonnet.io/component: kubeconfig
  name: kubeconfig
  namespace: cluster-reader
spec:
  ports:
  - port: 8085
    targetPort: 8085
  selector:
    app: kubeconfig
  type: ClusterIP
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    ksonnet.io/component: kubeconfig
  name: kubeconfig
  namespace: cluster-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeconfig
  template:
    metadata:
      labels:
        app: kubeconfig
    spec:
      serviceAccountName: cluster-reader
      containers:
      - image: asdfsx/kubeconfig
        name: kubeconfig
        ports:
        - containerPort: 8085
