artifacts/kubeconfig-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeconfig
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: cluster-reader
spec:
  rules:
  - host: kubeconfig.local.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeconfig
          servicePort: 8085
